# ai-ml-sdk-scenario-runner

./: .clang-format  .clang-tidy  .cmakelintrc  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  README.md  RELEASE_NOTES.md  REUSE.toml  ai-ml-sdk-scenario-runner.spdx.json  conanfile.txt  pyproject.toml  requirements.txt
pip_package/: pyproject.toml  setup.py  setup.py.template
pip_package/scenario_runner/: cli.py
src/: CMakeLists.txt  barrier.cpp  barrier.hpp  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  compute.cpp  compute.hpp  context.cpp  context.hpp  data_manager.cpp  data_manager.hpp  dds_reader.cpp  dds_reader.hpp  frame_capturer.cpp  frame_capturer.hpp  glsl_compiler.cpp  glsl_compiler.hpp  group_manager.cpp  group_manager.hpp  guid.hpp  hlsl_compiler.cpp  hlsl_compiler.hpp  image.cpp  image.hpp  image_formats.cpp  image_formats.hpp  iresource.cpp  iresource.hpp  json_reader.cpp  json_reader.hpp  json_writer.cpp  json_writer.hpp  logging.cpp  logging.hpp  main.cpp  memory_map.cpp  memory_map.hpp  numpy.cpp  (+35 more)
src/tests/: CMakeLists.txt  buffer_tests.cpp  conftest.py  dds_reader_tests.cpp  group_manager_tests.cpp  guid_tests.cpp  image_formats_tests.cpp  iresource_tests.cpp  json_parser_tests.cpp  json_writer_tests.cpp  logging_tests.cpp  numpy_test.cpp  perf_counter_tests.cpp  png_reader_tests.cpp  resource_manager_tests.cpp  temp_folder.hpp  tensor_tests.cpp  test_barrier.py  test_cli_options.py  test_dds.py  test_fragment.py  test_image_from_npy.py  test_image_invalid_extension.py  test_mark_boundary.py  test_memory_aliasing.py  test_mipmaps_writing.py  test_old_tensor_aliasing.py  test_optical_flow.py  test_pipeline_cache.py  test_png.py  test_repeated_runs.py  test_scenario.py  test_shader.py  test_shader_and_vgf_graph.py  test_spec_const.py  test_spv_graph.py  test_tensor_aliasing.py  test_tiling.py  test_vgf_graph.py  test_vgf_shader.py  (+2 more)
src/tests/json/: no_resources.json
src/tests/json/commands/: invalid_command.json  mutually_exclusive_commands.json
src/tests/json/commands/dispatch_barrier/: invalid_property.json  missing_buffer_barrier_refs.json  missing_image_barrier_refs.json  missing_memory_barrier_refs.json  missing_tensor_barrier_refs.json  reference.json
src/tests/json/commands/dispatch_compute/: binding_missing_resource_ref.json  binding_negative_id.json  binding_negative_set.json  invalid_property.json  missing_bindings.json  missing_push_data_ref.json  missing_rangeND.json  missing_shader_ref.json  rangeND_invalid_dim.json  rangeND_invalid_length.json  rangeND_invalid_length2.json  reference.json
src/tests/json/commands/dispatch_fragment/: invalid_color_attachment_refs.json  invalid_render_extent.json  invalid_render_extent_value.json  missing_bindings.json  missing_fragment_shader_ref.json  missing_render_extent_and_color.json  missing_vertex_shader_ref.json  reference.json  reference_render_extent.json
src/tests/json/commands/dispatch_graph/: binding_missing_resource_ref.json  binding_negative_id.json  binding_negative_set.json  invalid_property.json  missing_bindings.json  missing_graph_ref.json  reference.json
src/tests/json/commands/dispatch_optical_flow/: binding_missing_resource_ref.json  binding_negative_id.json  binding_negative_set.json  invalid_mean_flow_l1_norm_hint.json  invalid_property.json  missing_grid_size.json  missing_mean_flow_l1_norm_hint.json  missing_output_image.json  missing_performance_level.json  missing_search_image.json  missing_template_image.json  reference.json
src/tests/json/commands/dispatch_spirv_graph/: graph_constants_invalid_type.json  graph_constants_items_invalid_type.json  graph_constants_ok.json  reference.json
src/tests/json/commands/mark_boundary/: invalid_property.json  minimal.json  no_resource.json  reference.json
src/tests/json/resources/: invalid_resource.json  mutually_exclusive_resources.json
src/tests/json/resources/buffer/: invalid_property.json  invalid_shader_access.json  minimal.json  missing_shader_access.json  missing_size.json  missing_uid.json  mutually_exclusive_src_dst.json  reference.json
src/tests/json/resources/buffer_barrier/: graphics_stage.json  invalid_dst_access.json  invalid_offset.json  invalid_property.json  invalid_src_access.json  missing_buffer_resource.json  missing_dst_access.json  missing_size.json  missing_src_access.json  missing_uid.json  reference.json
src/tests/json/resources/graph/: invalid_property.json  invalid_shader_sub_property.json  invalid_spec_const_property.json  invalid_spec_consts_map_property.json  minimal.json  missing_shader_sub_shader_ref.json  missing_shader_sub_target.json  missing_src.json  missing_uid.json  reference.json
src/tests/json/resources/graph_constant/: invalid_dim_value.json  invalid_dims_empty.json  invalid_dims_length.json  invalid_property.json  missing_dims.json  missing_format.json  missing_src.json  missing_uid.json  reference.json
src/tests/json/resources/image/: invalid_border_address_mode.json  invalid_border_color.json  invalid_custom_border_color_length.json  invalid_dim_value.json  invalid_dims_length.json  invalid_mag_filter.json  invalid_min_filter.json  invalid_mip_filter.json  invalid_mips.json  invalid_property.json  invalid_shader_access.json  minimal.json  missing_dims.json  missing_format.json  missing_shader_access.json  missing_uid.json  mutually_exclusive_src_dst.json  reference.json
src/tests/json/resources/image_barrier/: invalid_dst_access.json  invalid_property.json  (+16 more)
src/tests/resources/test_shader_and_vgf_graph/: add_shader.glsl  sub_shader.glsl
src/tools/: CMakeLists.txt
src/tools/dds_utils/: main.cpp
src/tools/glslc/: main.cpp
src/tools/hlsl/: main.cpp
src/tools/png_utils/: main.cpp
src/vgf_runtime/: CMakeLists.txt  README.md  session.cpp  session.hpp  vgf.cpp  vgf_runtime_tests.cpp
src/vgf_runtime/include/vgf_runtime/: runtime.hpp
src/vgf_runtime/src/: session.cpp  session.hpp  vgf.cpp  vgf.hpp
src/vgf_runtime/tests/: vgf_runtime_full_tests.cpp  vgf_runtime_test_utils.hpp  vgf_runtime_vgf_tests.cpp
(+284 files in other folders)
